# wuziqi

./: .gitignore  BlackPlayer.cpp  BlackPlayer.h  CMakeLists.txt  Chess.cpp  Chess.h  ChessBoard.cpp  ChessBoard.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  PlayScene.cpp  PlayScene.h  Player.cpp  Player.h  README.md  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Utils.cpp  Utils.h  WhitePlayer.cpp  WhitePlayer.h  main.cpp  wuziqi.cpp
